# src/app/ai-knowledge-base/ai-knowledge-base.routes.ts
@@ -1,8 +1,8 @@
 import { Routes } from '@angular/router'
-import { AiKnowledgeBaseDetailsComponent } from './pages/ai-knowledge-base-details/ai-knowledge-base-details.component'
-import { AiKnowledgeBaseSearchComponent } from './pages/ai-knowledge-base-search/ai-knowledge-base-search.component'
+import { AIKnowledgeBaseDetailsComponent } from './pages/ai-knowledge-base-details/ai-knowledge-base-details.component'
+import { AIKnowledgeBaseSearchComponent } from './pages/ai-knowledge-base-search/ai-knowledge-base-search.component'
 
 export const routes: Routes = [
-  { path: 'details/:id', component: AiKnowledgeBaseDetailsComponent, pathMatch: 'full' },
-  { path: '', component: AiKnowledgeBaseSearchComponent, pathMatch: 'full' }
+  { path: 'details/:id', component: AIKnowledgeBaseDetailsComponent, pathMatch: 'full' },
+  { path: '', component: AIKnowledgeBaseSearchComponent, pathMatch: 'full' }
 ]
