# src/assets/swagger/onecx-ai-ui-bff.yaml
@@ -430,37 +430,37 @@ paths:
       responses:
         '204':
           description: AIProvider deleted
-  /aiKnowledgeBase/search:
+  /AIKnowledgeBase/search:
     post:
-      operationId: searchAiKnowledgeBases
+      operationId: searchAIKnowledgeBases
       tags:
-        - AiKnowledgeBaseBffService
-      description: This operation performs a search based on provided search criteria. Search for aiKnowledgeBase results.
+        - AIKnowledgeBaseBffService
+      description: This operation performs a search based on provided search criteria. Search for AIKnowledgeBase results.
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SearchAiKnowledgeBaseRequest'
+              $ref: '#/components/schemas/SearchAIKnowledgeBaseRequest'
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SearchAiKnowledgeBaseResponse'
+                $ref: '#/components/schemas/SearchAIKnowledgeBaseResponse'
         '400':
           description: Bad request
         '500':
           description: Something went wrong
-  /aiKnowledgeBase/{id}:
+  /AIKnowledgeBase/{id}:
     get:
       x-onecx:
         permissions:
-          aiKnowledgeBase:
+          aIKnowledgeBase:
             - read
-      operationId: getAiKnowledgeBaseById
+      operationId: getAIKnowledgeBaseById
       tags:
-        - AiKnowledgeBaseBffService
+        - AIKnowledgeBaseBffService
       parameters:
         - name: id
           in: path
@@ -473,7 +473,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GetAiKnowledgeBaseByIdResponse'
+                $ref: '#/components/schemas/GetAIKnowledgeBaseByIdResponse'
         '400':
           description: Bad request
           content:
@@ -489,9 +489,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
     put:
-      operationId: updateAiKnowledgeBase
+      operationId: updateAIKnowledgeBase
       tags:
-        - AiKnowledgeBaseBffService
+        - AIKnowledgeBaseBffService
       description: This operation performs an update.
       parameters:
         - name: id
@@ -504,10 +504,10 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UpdateAiKnowledgeBaseRequest'
+              $ref: '#/components/schemas/UpdateAIKnowledgeBaseRequest'
       responses:
         '204':
-          description: AiKnowledgeBase updated
+          description: AIKnowledgeBase updated
           headers:
             Location:
               required: true
@@ -517,7 +517,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UpdateAiKnowledgeBaseResponse'
+                $ref: '#/components/schemas/UpdateAIKnowledgeBaseResponse'
         '400':
           description: Bad request
           content:
@@ -525,12 +525,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
         '404':
-          description: AiKnowledgeBase not found
+          description: AIKnowledgeBase not found
     delete:
       tags:
-        - AiKnowledgeBaseBffService
-      operationId: deleteAiKnowledgeBase
-      description: Delete AiKnowledgeBase by id
+        - AIKnowledgeBaseBffService
+      operationId: deleteAIKnowledgeBase
+      description: Delete AIKnowledgeBase by id
       parameters:
         - name: id
           in: path
@@ -539,22 +539,22 @@ paths:
             type: string
       responses:
         '204':
-          description: AiKnowledgeBase deleted
-  /aiKnowledgeBase:
+          description: AIKnowledgeBase deleted
+  /AIKnowledgeBase:
     post:
-      operationId: createAiKnowledgeBase
+      operationId: createAIKnowledgeBase
       tags:
-        - AiKnowledgeBaseBffService
+        - AIKnowledgeBaseBffService
       description: This operation performs a create.
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateAiKnowledgeBaseRequest'
+              $ref: '#/components/schemas/CreateAIKnowledgeBaseRequest'
       responses:
         '201':
-          description: New AiKnowledgeBase created
+          description: New AIKnowledgeBase created
           headers:
             Location:
               required: true
@@ -564,7 +564,148 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CreateAiKnowledgeBaseResponse'
+                $ref: '#/components/schemas/CreateAIKnowledgeBaseResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
+  /aiContext/{id}:
+    get:
+      x-onecx:
+        permissions:
+          aiContext:
+            - read
+      operationId: getAIContextById
+      tags:
+        - AIContextBffService
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetAIContextByIdResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
+    put:
+      operationId: updateAIContext
+      tags:
+        - AIContextBffService
+      description: This operation performs an update.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateAIContextRequest'
+      responses:
+        '204':
+          description: AIContext updated
+          headers:
+            Location:
+              required: true
+              schema:
+                type: string
+                format: url
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UpdateAIContextResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
+        '404':
+          description: AIContext not found
+    delete:
+      tags:
+        - AIContextBffService
+      operationId: deleteAIContext
+      description: Delete AIContext by id
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: AIContext deleted
+  /aiContext/search:
+    post:
+      operationId: searchAIContexts
+      tags:
+        - AIContextBffService
+      description: This operation performs a search based on provided search criteria. Search for aiContext results.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SearchAIContextRequest'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchAIContextResponse'
+        '400':
+          description: Bad request
+        '500':
+          description: Something went wrong
+  /aiContext:
+    post:
+      operationId: createAIContext
+      tags:
+        - AIContextBffService
+      description: This operation performs a create.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateAIContextRequest'
+      responses:
+        '201':
+          description: New AIContext created
+          headers:
+            Location:
+              required: true
+              schema:
+                type: string
+                format: url
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateAIContextResponse'
         '400':
           description: Bad request
           content:
@@ -593,7 +734,7 @@ components:
           type: string
         aiContext:
           type: object
-          $ref: AIContext
+          $ref: '#/components/schemas/AIContext'
     SearchAIKnowledgeVectorDbRequest:
       type: object
       properties:
@@ -679,6 +820,9 @@ components:
           type: string
         appId:
           type: string
+        aiContext:  
+          type: object
+          $ref: '#/components/schemas/AIContext'
     AIKnowledgeVectorDbCreateResponse:
       type: object
       properties:
@@ -692,7 +836,7 @@ components:
           type: string
         aiContext:
           type: object
-          $ref: AIContext
+          $ref: '#/components/schemas/AIContext'
     AIKnowledgeVectorDbUpdateResponse:
       type: object
       properties:
@@ -706,12 +850,7 @@ components:
           type: string
         aiContext:
           type: object
-          $ref: AIContext
-    AIContext:
-      type: object
-      properties:
-        appId:
-          type: string
+          $ref: '#/components/schemas/AIContext'
     AIKnowledgeDocument:
       type: object
       required:
@@ -894,13 +1033,13 @@ components:
       properties:
         dataObject:
           type: object
-          $ref: AIProvider
+          $ref: '#/components/schemas/AIProvider'
     UpdateAIProvider:
       type: object
       properties:
         dataObject:
           type: object
-          $ref: AIProvider
+          $ref: '#/components/schemas/AIProvider'
     AIProviderCreateResponse:
       type: object
       properties:
@@ -939,7 +1078,7 @@ components:
           type: string
         apiKey:
           type: string
-    AiKnowledgeBase:
+    AIKnowledgeBase:
       type: object
       required:
         - id
@@ -953,18 +1092,18 @@ components:
           type: string
         description:
           type: string
-    CreateAiKnowledgeBaseRequest:
+    CreateAIKnowledgeBaseRequest:
       type: object
       properties:
         dataObject:
-          $ref: '#/components/schemas/AiKnowledgeBase'
-    CreateAiKnowledgeBaseResponse:
+          $ref: '#/components/schemas/AIKnowledgeBase'
+    CreateAIKnowledgeBaseResponse:
       type: object
       properties:
         dataObject:
           type: object
-          $ref: '#/components/schemas/AiKnowledgeBase'
-    SearchAiKnowledgeBaseRequest:
+          $ref: '#/components/schemas/AIKnowledgeBase'
+    SearchAIKnowledgeBaseRequest:
       type: object
       properties:
         id:
@@ -985,7 +1124,7 @@ components:
           type: string
         description:
           type: string
-    SearchAiKnowledgeBaseResponse:
+    SearchAIKnowledgeBaseResponse:
       type: object
       required:
         - stream
@@ -997,7 +1136,7 @@ components:
         stream:
           type: array
           items:
-            $ref: '#/components/schemas/AiKnowledgeBase'
+            $ref: '#/components/schemas/AIKnowledgeBase'
         size:
           type: integer
           format: int32
@@ -1014,23 +1153,187 @@ components:
           type: integer
           format: int64
           description: Total pages.
-    UpdateAiKnowledgeBaseRequest:
+    UpdateAIKnowledgeBaseRequest:
       type: object
       properties:
         dataObject:
           type: object
-          $ref: '#/components/schemas/AiKnowledgeBase'
-    UpdateAiKnowledgeBaseResponse:
+          $ref: '#/components/schemas/AIKnowledgeBase'
+    UpdateAIKnowledgeBaseResponse:
       type: object
       properties:
         dataObject:
           type: object
-          $ref: '#/components/schemas/AiKnowledgeBase'
+          $ref: '#/components/schemas/AIKnowledgeBase'
         # "ACTION DE1: modify data object or use flat list here. https://onecx.github.io/docs/nx-plugins/current/general/getting_started/create-update/extend-form-fields.html#action-1"
-    GetAiKnowledgeBaseByIdResponse:
+    GetAIKnowledgeBaseByIdResponse:
       type: object
       required:
         - result
       properties:
         result:
-          $ref: '#/components/schemas/AiKnowledgeBase'
+          $ref: '#/components/schemas/AIKnowledgeBase'
+    UpdateAIContextRequest:
+      type: object
+      properties:
+        dataObject:
+          type: object
+          $ref: '#/components/schemas/AIContext'
+    UpdateAIContextResponse:
+      type: object
+      properties:
+        dataObject:
+          type: object
+          $ref: '#/components/schemas/AIContext'
+    GetAIContextByIdResponse:
+      type: object
+      required:
+        - result
+      properties:
+        result:
+          $ref: '#/components/schemas/AIContext'
+    SearchAIContextRequest:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        pageNumber:
+          type: integer
+          format: int32
+          default: 0
+          description: The number of the page
+        pageSize:
+          type: integer
+          format: int32
+          default: 100
+          maximum: 1000
+          description: The size of the page.
+        name:
+          type: string
+        description:
+          type: string
+        appId:
+          type: string
+    SearchAIContextResponse:
+      type: object
+      required:
+        - stream
+        - size
+        - number
+        - totalPages
+        - totalElements
+      properties:
+        stream:
+          type: array
+          items:
+            $ref: '#/components/schemas/AIContext'
+        size:
+          type: integer
+          format: int32
+          description: Current page size.
+        number:
+          type: integer
+          format: int32
+          description: Current page number.
+        totalElements:
+          type: integer
+          format: int64
+          description: Total number of results on the server.
+        totalPages:
+          type: integer
+          format: int64
+          description: Total pages.
+    AIContext:
+      type: object
+      properties:
+        id:
+          type: string
+        appId:
+          type: string
+        name:
+          type: string
+        description:
+          type: string
+        modificationCount:
+          type: integer
+          format: int32
+        modificationUser:
+          type: string
+        creationUser:
+          type: string
+        aIKnowledgeBase:
+          $ref: '#/components/schemas/AIKnowledgeBase'
+        aIKnowledgeVectorDb:
+          $ref: '#/components/schemas/AIKnowledgeVectorDb'
+        aIKnowledgeUrl:
+          type: array
+          items:
+            $ref: '#/components/schemas/AIKnowledgeUrl'
+        aIKnowledgeDbs:
+          type: array
+          items:
+            $ref: '#/components/schemas/AIKnowledgeDatabase'
+        aIKnowledgeDocuments:
+          type: array
+          items:
+            $ref: '#/components/schemas/AIKnowledgeDocument'
+        provider:
+          $ref: '#/components/schemas/AIProvider'
+    AIKnowledgeUrl:
+      type: object
+      properties:
+        modificationCount:
+          format: int32
+          type: integer
+        modificationUser:
+          type: string
+        creationUser:
+          type: string
+        id:
+          type: string
+        url:
+          type: string
+        name:
+          type: string
+        description:
+          type: string
+    AIKnowledgeDatabase:
+      required:
+        - db
+        - user
+        - pwd
+      type: object
+      properties:
+        modificationCount:
+          format: int32
+          type: integer
+        modificationUser:
+          type: string
+        id:
+          type: string
+        name:
+          type: string
+        description:
+          type: string
+        db:
+          type: string
+        user:
+          type: string
+        pwd:
+          type: string
+        tables:
+          type: array
+          items:
+            type: string
+    CreateAIContextRequest:
+      type: object
+      properties:
+        dataObject:
+          $ref: '#/components/schemas/AIContext'
+    CreateAIContextResponse:
+      type: object
+      properties:
+        dataObject:
+          type: object
+          $ref: '#/components/schemas/AIContext'
